# bincollector

./: .gitattributes  CMakeLists.txt  README.md
src/: app.cpp  app.hpp  main.cpp
src/common/: bt_error.cpp  bt_error.hpp  fltbf.hpp  magic.cpp  magic.hpp  mmap.cpp  mmap.hpp  sha2.hpp  string.hpp  wad.hpp  xxhash64.hpp
src/file/: base.cpp  base.hpp  hashlist.cpp  hashlist.hpp  raw.cpp  raw.hpp  rlsm.cpp  rlsm.hpp  rman.cpp  rman.hpp  wad.cpp  wad.hpp
src/file/rlsm/: manifest.cpp  manifest.hpp
src/file/rman/: manifest.cpp  manifest.hpp
src/file/sln/: manifest.cpp  manifest.hpp
src/file/wad/: wad.cpp  wad.hpp
